Corrected spacing of injuryTolerance table

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -862,7 +862,7 @@ attribute-senses {
 
 .injuryTolerancesTable {
 	width: unset;
-	margin: 0px 5px;
+	margin: 5px 5px;
 }
 
 .injuryTolerancesCheckTd {
